# AgoraDualTeacher

./: .gitignore  AgoraEduSDK.sln  CMakeLists.txt  README.md  README.zh.md  clear.bat  compile-install.bat  compile-windows.bat
common/: base.h
rtc/: EventHandler.cpp  EventHandler.h  Rtc.cpp  Rtc.h
rtm/: Rtm.cpp  Rtm.h  RtmChannelHandler.cpp  RtmChannelHandler.h  RtmEventHandler.cpp  RtmEventHandler.h
sdk/agora_video_source/include/: IAgoraVideoSourceEngine.h
sdk/agora_video_source/lib/: agora_videosource_sdk.lib
sdk/rtc/lib/: agora_rtc_sdk.lib
sdk/rtm/include/: IAgoraRtmService.h
src/: AgoraEnv.h  AgoraRtcEngine.cpp  AgoraRtcEngine.h  AgoraVideoWidget.cpp  AgoraVideoWidget.h  Config.h  DeviceManager.cpp  DeviceManager.h  DlgExtend.cpp  DlgExtend.h  DlgExtend.ui  DlgInfo.cpp  DlgInfo.h  DlgInfo.ui  DlgSettingAudio.cpp  DlgSettingAudio.h  DlgSettingAudio.ui  DlgSettingSelect.cpp  DlgSettingSelect.h  DlgSettingSelect.ui  DlgSettingVideo.cpp  DlgSettingVideo.h  DlgSettingVideo.ui  DlgSettings.cpp  DlgSettings.h  DlgSettings.ui  DlgVersion.cpp  DlgVersion.h  DlgVersion.ui  DlgVideoRoom.cpp  DlgVideoRoom.h  DlgVideoRoom.ui  DualTeacher.qrc  QRoundCornerDialog.cpp  QRoundCornerDialog.h  RCa19276  SettingsData.cpp  SettingsData.h  UILayout.cpp  VideoWidget.cpp  (+13 more)
src/Resources/: icon-layout actived.psd
src/agora_edu_demo/: agora_edu_demo.qrc  agora_edu_demo.vcxproj  agora_edu_demo.vcxproj.filters  main.cpp
src/agora_edu_demo/BugTrap/: BugTrap.lib  BugTrapD.lib  BugTrapU.lib  BugTrapUD.lib
src/agora_edu_demo/ctrl/: AgoraChatWidget.cpp  AgoraChatWidget.h  AgoraInnerChatContent.cpp  AgoraInnerChatContent.h  AgoraSlider.cpp  AgoraSlider.h  AgoraVideoWidget.cpp  AgoraVideoWidget.h  AgoraVolumeWidget.cpp  AgoraVolumeWidget.h  QRoundCornerDialog.cpp  QRoundCornerDialog.h  video_render_opengl.cpp  video_render_opengl.h
src/agora_edu_demo/resource/: agora_edu_demo.rc
src/agora_edu_demo/src/: login_widget_manager.cpp  login_widget_manager.h  student_widget_manager.cpp  student_widget_manager.h  teacher_widget_manager.cpp  teacher_widget_manager.h
src/agora_edu_demo/ui/: AgoraChatWidget.ui  AgoraClassRoomListWidget.cpp  AgoraClassRoomListWidget.h  AgoraClassroomListWidget.ui  AgoraClassroomWidget.cpp  AgoraClassroomWidget.h  AgoraClassroomWidget.ui  AgoraLoginWidget.cpp  AgoraLoginWidget.h  AgoraLoginWidget.ui  AgoraSelectShareDlg.cpp  AgoraSelectShareDlg.h  AgoraSelectShareDlg.ui  AgoraSettingDialog.cpp  AgoraSettingDialog.h  AgoraSettingDialog.ui  AgoraStudentWidget.cpp  AgoraStudentWidget.h  AgoraStudentWidget.ui  AgoraTeacherWidget.cpp  AgoraTeacherWidget.h  AgoraTeacherWidget.ui  AgoraTipsDialog.cpp  AgoraTipsDialog.h  AgoraTipsWidget.ui  AgoraVideoListWidget.cpp  AgoraVideoListWidget.h  AgoraVideoListWidget.ui
src/agora_edu_demo/util/: util.cpp  util.h
src/agora_edu_sdk/: agora_edu_sdk.vcxproj  agora_edu_sdk.vcxproj.filters  dllmain.cpp  edu_report_service.cpp  edu_report_service.h  edu_user_service_base.h  export.def  framework.h
src/agora_edu_sdk/BugReport/: dump_report.h  xdump_report.lib
src/agora_edu_sdk/base/event2/: BUILD.gn  Makefile.in  buffer.c  epoll.c  epoll_internal.h  evconfig-private.h  event.c  event_tagging.c  evmap.c  evrpc.c  evthread_win32.c  evutil.c  evutil_rand.c  evutil_time.c  log.c  signal.c  wepoll.c  wepoll.h
src/agora_edu_sdk/base/event2/android/event2/: event-config.h
src/agora_edu_sdk/base/event2/include/event2/: event.h
src/agora_edu_sdk/base/event2/linux/event2/: event-config.h
src/agora_edu_sdk/base/event2/mac/event2/: event-config.h
src/agora_edu_sdk/base/event2/win/event2/: event-config.h
src/agora_edu_sdk/base/include/: agora_api.h  protobuf_packable.h  sigslot.h
src/agora_edu_sdk/base/main/: agora_generic_bridge.cpp  agora_generic_bridge.h  ap_client.cpp  ap_manager.cpp  ap_request.cpp  ap_selector.cpp  audio_device_manager_proxy.cpp  audio_device_manager_proxy.h  base_context.cpp  cache_file_manager.cpp  cache_file_manager.h  cache_manager.cpp  channel_manager.cpp  channel_manager.h  channel_proxy.cpp  channel_proxy.h  channel_proxy_handler.cpp  channel_proxy_safe.cpp  channel_proxy_safe.h  config_engine.cpp  cross_channel_manager.cpp  device_profile.cpp  device_profile.h  extension_node_manager.cpp  extension_node_manager.h  live_stream_proxy.cpp  live_stream_proxy.h  local_track_manager.cpp  local_track_manager.h  log_engine_bridge.cpp  log_engine_bridge.h  main - 快捷方式.lnk  media_engine.cpp  media_engine.h  media_player_impl.cpp  media_player_impl.h  media_player_manager.cpp  media_player_manager.h  network_monitor.cpp  object_to_string.cpp  (+34 more)
src/agora_edu_sdk/base/rtc_base/: BUILD.gn  helpers.cc  logging.cc  logging.h  logsinks.cc  logsinks.h  messagedigest.cc  openssldigest.h  physicalsocketserver.cc  sanitizer.h  ssladapter.cc  sslcertificate.cc  sslidentity.cc  sslstreamadapter.cc  stringutils.h  unittest_main.cc
src/agora_edu_sdk/base/rte/: rte_engine.cpp  rte_engine.h  rte_local_user.cpp  rte_local_user.h  rte_scene.cpp  rte_scene.h  scene_user_manager.cpp  scene_user_manager.h
src/agora_edu_sdk/base/utils/: build_config.h  compiler_specific.h  refcountedobject.h
src/agora_edu_sdk/interface/base/: AgoraRefPtr.h  EduBaseTypes.h  EduClassroom.h  EduMessage.h  EduStream.h  EduUser.h  EduVideoEncoderConfiguration.h  ErrorCode.h
src/agora_edu_sdk/src/: AgoraLogSystem.cpp  AgoraLogSystem.h  edu_assistant_service_impl.cpp  edu_assistant_service_impl.h  edu_classroom_manager_impl.cpp  edu_classroom_manager_impl.h  edu_collection_impl.h  edu_device_manager_impl.cpp  edu_device_manager_impl.h  edu_event.cpp  edu_event.h  edu_manager_impl.cpp  edu_manager_impl.h  edu_message_impl.h  edu_service.cpp  edu_service.h  edu_service_restful_api.cpp  edu_service_restful_api.h  edu_student_service_impl.cpp  edu_student_service_impl.h  edu_teacher_service_impl.cpp  edu_teacher_service_impl.h  edu_user_service_impl.cpp  edu_user_service_impl.h  edu_user_student_service.h  edu_video_frame_impl.cpp  edu_video_frame_impl.h  refcountedobject.h  rtc_conn_manager.cpp  rtc_conn_manager.h
(+812 files in other folders)
